# agent-memory

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  analyze_misses.py  analyze_tokens.py  diag_format.py  run_bench_v5.sh  run_v5.sh
docs/: architecture-review.md
docs/benchmarks/: optimization-report.md  phase1-vs-phase2-root-cause-analysis.md
docs/plans/: 2026-05-18-sqlite-memory-store.md
examples/: basic.rs
migrations/: 0012_add_embedding_cache.sql
src/: embedding.rs  engine.rs  entity.rs  extractor.rs  file_store.rs  ingestion_buffer.rs  lib.rs  llm.rs  models.rs  observation.rs  retriever.rs  sqlite_store.rs  store.rs  text.rs  volatile_store.rs
src/benchmark/: answerer.rs  dataset.rs  judge.rs  loader.rs  metrics.rs  mod.rs  reranker.rs  runner.rs
tests/: benchmark_tests.rs  memory_tests.rs  sqlite_tests.rs
tests/fixtures/: locomo_null_answer.json  tiny_benchmark.json
